[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-tavily>=0.2.5",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
]
